tab button shift fixed

--- a/src/app/openpositions/openpositions.component.css
+++ b/src/app/openpositions/openpositions.component.css
@@ -87,16 +87,26 @@ top:50px;
     font-size: 1.25rem;
     font-family: Outfit;
     font-weight: 600;
-    width: 100%;
+    width: 90%;
     text-align: center;
     left: 5vw;
 }   
+
+.nav-link{
+    width: 200px;
+    cursor: pointer;
+    
+}
 
 .actived{
     color:rgba(0, 172, 43, 1);
     width: 200px;
     cursor: pointer;
     text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+
 }
 
 .closed{
@@ -104,6 +114,9 @@ top:50px;
    width: 200px;
    cursor: pointer;
    text-decoration: none;
+   display: inline-block;
+   text-align: center;
+   white-space: nowrap;
 }
 
 .aclosed{
@@ -129,12 +142,14 @@ top:50px;
     position: relative;
     width: 82vw;
     left: 8vw;
+    border-radius: 10px 10px 0 0;
+    border-bottom: none;
+    
   }
 
 .table-bordered{
    border: 1px solid #205072;
    border-radius: 10px 10px 0 0;
-   border: 1px solid #205072;
    
 }
 
